Refine content in multiple HTML files for improved clarity and consistency. Updated headings to paragraphs for better readability and adjusted spacing elements to enhance overall layout presentation.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -269,13 +269,10 @@
 
 
       <div class="highlight-box">
-        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: -16px;">Hypothesis</h4>
-
-        <h3>If we give writers a more effective tool, we can raise the 
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">Hypothesis</h4>
+        <p style="margin-top: 0px; margin-bottom: 0px; font-size: 24px;">If we give writers a more effective tool, we can raise the 
             baseline for SEO across all stories with the pay off being clear: stronger rankings, more pageviews,
-            and ultimately, more revenue for Forbes.
-        </h3>
-        
+            and ultimately, more revenue for Forbes.</p>
       </div>
 
       <br>
@@ -361,10 +358,10 @@
 <p class="lead-paragraph">These 4 sentiments inspired the north star of what we were aiming 
     for this product to achieve: </p>
 <div class="highlight-box">
-    <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: -16px;">hmw statement</h4>
-    <h3>How might we make SEO guidance visible, actionable, and seamlessly integrated into writers’ 
+    <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">hmw statement</h4>
+    <p style="margin-top: 0px; margin-bottom: 0px; font-size: 24px;">How might we make SEO guidance visible, actionable, and seamlessly integrated into writers’ 
         workflows; so that even those unaware of the tool, or pressed 
-        for time feel empowered to audit their work with speed & confidence?</h3>
+        for time feel empowered to audit their work with speed & confidence?</p>
     
   </div>
 
