--- a/explore.html
+++ b/explore.html
@@ -252,11 +252,9 @@
       <br>
 
       <div class="highlight-box">
-        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: -16px;">challenge</h4>
-
-        <h3>"Rethink Information Consumption Patterns Amidst The Proliferation 
-          Of AI And Create A Homepage To Represent That."</h3> 
-        
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">challenge</h4>
+        <p style="margin-top: 0px; margin-bottom: 0px; font-size: 24px;">"Rethink Information Consumption Patterns Amidst The Proliferation 
+          Of AI And Create A Homepage To Represent That."</p>
       </div>
 
       <br>
@@ -470,11 +468,10 @@
 </p>
 
  <div class="highlight-box">
-        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: -16px;">hmw statement</h4>
-        <h3>How might we design a quick, snackable news
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">hmw statement</h4>
+        <p style="margin-top: 0px; margin-bottom: 0px; font-size: 24px;">How might we design a quick, snackable news
           experience that leverages peer commentary and empowers users to grasp the essence of multiple stories more
-           easily than reading a single dense article?</h3>
-        
+           easily than reading a single dense article?</p>
       </div>
 
       <br>
