Refine description in work.html for the FUEL project to clarify the functionality of the natural-language query builder for editorial teams.

--- a/work.html
+++ b/work.html
@@ -91,7 +91,7 @@
         <span class="context-tag">Logic Building UI</span>
       </div>
       <h3>FUEL: Advanced Search & Custom List Creation</h3>
-      <p>From engineering reliance to self-serve: creating a structured query builder for editorial teams to create custom Forbes Lists.</p>
+      <p>Creating a schema-driven natural-language query builder for editorial teams to create custom lists.</p>
     </div>
 
     <div class="project-content" data-category="consumer">
